--- a/css/custom.css
+++ b/css/custom.css
@@ -4,26 +4,22 @@
  *
  */
 
-body, section {			/* Change width and height to own preferences */
+body, section {
 	width: 500px;
 	height: auto;
 	overflow-x: hidden;
 	padding: 30px;
 }
 
-/* Basic style tweaks */
+
 .navbar { margin-bottom: 2px; }
 
-/* Scroll Bar */
+
 ::-webkit-scrollbar { width: 6px; }
 ::-webkit-scrollbar-track { -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); }
 ::-webkit-scrollbar-thumb, ::-webkit-scrollbar-thumb:window-inactive  { background: red; }
 
-/*
-table, th, td {
-  border: 1px solid black;
-}
-*/
+
 table {
 	padding: 30px;
 }
